// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Prefilled story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value="123456.789"
    value-state="None"
  />
</div>
`;

exports[`Renders Standard story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value=""
    value-state="None"
  />
</div>
`;

exports[`Renders WithGrouping story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value="123,456.789"
    value-state="None"
  />
</div>
`;

exports[`Renders WithIcon story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value=""
    value-state="None"
  >
    <span
      slot="icon"
    >
      EUR
    </span>
  </ui5-input>
</div>
`;

exports[`Renders WithLocaleDe story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value="123.456,789"
    value-state="None"
  />
</div>
`;

exports[`Renders WithLocaleIn story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value="1,23,456.789"
    value-state="None"
  />
</div>
`;

exports[`Renders WithLocalePl story 1`] = `
<div>
  <ui5-input
    inputmode="decimal"
    maxlength="18"
    type="Text"
    ui5-input=""
    value="123 456,789"
    value-state="None"
  />
</div>
`;
